[gd_scene load_steps=6 format=3 uid="uid://ddw2i3utc1jti"]

[ext_resource type="Texture2D" uid="uid://cvjpeir0ejt2v" path="res://icon/delete.svg" id="1_cicca"]
[ext_resource type="Script" uid="uid://cb5t4vrxrj43j" path="res://main/genomes_panel/cell_type_panel.gd" id="1_fk5vb"]
[ext_resource type="PackedScene" uid="uid://b7w4l8gi8wh08" path="res://appearance/simple_a/simple_a_cell_b.tscn" id="2_ogvsj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogvsj"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.437044, 0.00028479, 0.485718, 1)

[sub_resource type="Environment" id="Environment_yotkh"]
background_mode = 1
background_energy_multiplier = 1.53
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.65

[node name="CellTypePanel" type="PanelContainer"]
offset_left = 186.0
offset_right = 518.0
offset_bottom = 62.0
theme_type_variation = &"CellTypePanel"
script = ExtResource("1_fk5vb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ogvsj")

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="CellAppearance" type="SubViewport" parent="HBoxContainer/PanelContainer/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
handle_input_locally = false
msaa_3d = 3
screen_space_aa = 1
scaling_3d_scale = 2.0
anisotropic_filtering_level = 4
size = Vector2i(50, 50)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D"]
environment = SubResource("Environment_yotkh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D/WorldEnvironment"]
transform = Transform3D(0.962956, -0.0971468, -0.251553, 0.269659, 0.346912, 0.898296, 0, -0.932853, 0.360257, -3.32323, 0, 10.9019)

[node name="SpotLight3D" type="SpotLight3D" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D/WorldEnvironment"]
transform = Transform3D(0.823027, 0.1866, 0.536476, 0, 0.944497, -0.328521, -0.568002, 0.270381, 0.777347, 5.34054, -4.07409, 5.11542)
light_energy = 1.571
spot_range = 45.878

[node name="CellAppearanceHolder" type="Node3D" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="SimpleACellB" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D/CellAppearanceHolder" instance=ExtResource("2_ogvsj")]

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/PanelContainer/SubViewportContainer/CellAppearance/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.633)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CellTypeName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"LineEditFlat"
text = "(cell type name)"
flat = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"GridHeaderLabel"
text = "Energy Cost:"

[node name="EnergyCostLabel" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99"

[node name="DeleteCellTypeButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("1_cicca")
